ship port and dashboard front end

--- a/admin_panel/add_arrivals.html
+++ b/admin_panel/add_arrivals.html
@@ -22,11 +22,11 @@
                          </div>
                          <div class="input-box">
                              <span class="details">Arrival Date</span>
-                             <input type="text" placeholder="Enter arrival date" id="arrivalDate" name="arrivalDate" required>
+                             <input type="date" placeholder="Enter arrival date" id="arrivalDate" name="arrivalDate" required>
                          </div>
                          <div class="input-box">
                              <span class="details">Departure Date</span>
-                             <input type="text" placeholder="Enter Departure Date" id="departureDate" name="departureDate" required>
+                             <input type="date" placeholder="Enter Departure Date" id="departureDate" name="departureDate" required>
                          </div>
                          <div class="input-box">
                              <span class="details">Cargo Description</span>
@@ -42,7 +42,7 @@
                          </div>
                          <div class="input-box">
                              <span class="details">Ship ID</span>
-                             <input type="text" id="shipID" name="shipID" required>
+                             <input type="number" placeholder="Enter ship ID" id="shipID" name="shipID" required>
                          </div>
                          <div class="input-box">
                              <span class="details">ship Image</span>
