--- a/admin_panel/crew_admin.html
+++ b/admin_panel/crew_admin.html
@@ -18,11 +18,11 @@
              <div class="user-details">
                          <div class="input-box">
                              <span class="details">crew Name</span>
-                             <input type="text" placeholder="Enter the name of ship" id="crewName" name="crewName" required>
+                             <input type="text" placeholder="Enter the name of crew" id="crewName" name="crewName" required>
                          </div>
                          <div class="input-box">
                              <span class="details">role</span>
-                             <input type="text" placeholder="Enter ship type" id="role" name="role" required>
+                             <input type="text" placeholder="Enter crew role" id="role" name="role" required>
                          </div>
                          <div class="input-box">
                              <span class="details">nationality</span>
@@ -38,7 +38,7 @@
                          </div>
                          <div class="input-box">
                              <span class="details">Ship ID</span>
-                             <input type="text" id="shipID" name="shipID" required>
+                             <input type="number" placeholder="Enter ship ID" id="shipID" name="shipID" required>
                          </div>
                          <div class="input-box">
                              <span class="details">Crew Image</span>
