--- a/admin_panel/crew_update.html
+++ b/admin_panel/crew_update.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="input-box">
                             <span class="details">Join Date</span>
-                            <input type="text" placeholder="Enter join date" id="joinDate" value="" name="joinDate" required>
+                            <input type="date" placeholder="Enter join date" id="joinDate" value="" name="joinDate" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Email</span>
@@ -37,7 +37,7 @@
                         </div>
                         <div class="input-box">
                             <span class="details">Ship ID</span>
-                            <input type="text" id="shipID" value="" name="shipID" required>
+                            <input type="number" placeholder="Enter ship ID" id="shipID" value="" name="shipID" required>
                         </div>
                 
                         <div class="input-box">
