--- a/admin_panel/ships_update.html
+++ b/admin_panel/ships_update.html
@@ -20,20 +20,20 @@
                             <input type="text" placeholder="Enter the name of ship" id="shipName" value="" name="shipName" required>
                         </div>
                         <div class="input-box">
-                            <span class="details">Role</span>
+                            <span class="details">ship type</span>
                             <input type="text" placeholder="Enter ship type" id="shipType" value="" name="shipType" required>
                         </div>
                         <div class="input-box">
-                            <span class="details">Nationality</span>
-                            <input type="text" placeholder="Enter nationality" id="maxCapacity" value="" name="maxCapacity" required>
+                            <span class="details">max capacity</span>
+                            <input type="number" placeholder="Enter max capacity" id="maxCapacity" value="" name="maxCapacity" required>
                         </div>
                         <div class="input-box">
                             <span class="details">registration Date</span>
-                            <input type="text" placeholder="Enter registration date" id="registrationDate" value="" name="registrationDate" required>
+                            <input type="date" placeholder="Enter registration date" id="registrationDate" value="" name="registrationDate" required>
                         </div>
                         <div class="input-box">
                             <span class="details">owner info</span>
-                            <input type="text" placeholder="Enter owner info" id="ownerInfo" value="" name="ownerInfo" required>
+                            <input type="email" placeholder="Enter owner info" id="ownerInfo" value="" name="ownerInfo" required>
                         </div>
                 
                         <div class="input-box">
