--- a/admin_panel/cargo_update.html
+++ b/admin_panel/cargo_update.html
@@ -16,11 +16,11 @@
             <form action="" method="post" enctype="multipart/form-data">
             <div class="user-details">
                         <div class="input-box">
-                            <span class="details"> cargo description</span>
+                            <span class="details">cargo description</span>
                             <input type="text" placeholder="Enter the cargo description" id="description" value="" name="description" required>
                         </div>
                         <div class="input-box">
-                            <span class="details"> cargo quantity</span>
+                            <span class="details">cargo quantity</span>
                             <input type="text" placeholder="Enter cargo quantity" id="quantity" value="" name="quantity" required>
                         </div>
                         <div class="input-box">
@@ -28,12 +28,12 @@
                             <input type="text" placeholder="Enter cargo weight" id="weight" value="" name="weight" required>
                         </div>
                         <div class="input-box">
-                            <span class="details">  </span>
+                            <span class="details">container type</span>
                             <input type="text" placeholder="Enter container type " id="containerType" value="" name="containerType" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Ship ID</span>
-                            <input type="text" id="shipID" value="" name="shipID" required>
+                            <input type="number" placeholder="Enter ship ID" id="shipID" value="" name="shipID" required>
                         </div>
             </div>
             <div class="button">
