--- a/admin_panel/ships_admin.html
+++ b/admin_panel/ships_admin.html
@@ -26,7 +26,7 @@
                          </div>
                          <div class="input-box">
                              <span class="details">max capacity</span>
-                             <input type="text" placeholder="Enter max capacity" id="maxCapacity" name="maxCapacity" required>
+                             <input type="number" placeholder="Enter max capacity" id="maxCapacity" name="maxCapacity" required>
                          </div>
                          <div class="input-box">
                              <span class="details">registration date</span>
@@ -34,7 +34,7 @@
                          </div>
                          <div class="input-box">
                              <span class="details">owner info</span>
-                             <input type="text" placeholder="Enter owner info" id="ownerInfo" name="ownerInfo" required>
+                             <input type="email" placeholder="Enter owner info" id="ownerInfo" name="ownerInfo" required>
                          </div>
                          <div class="input-box">
                              <span class="details">ship Image</span>
