registration , ship port and dashboard front part

--- a/admin_panel/add_arrivals.html
+++ b/admin_panel/add_arrivals.html
@@ -51,6 +51,7 @@
              </div>
              <div class="button">
                          <input type="submit" name="add_arrival" value="Add ship arrival">
+                         <a href="dashboard.html">go back</a>
              </div>
              </form>
          </div>
