--- a/admin_panel/cargo_admin.html
+++ b/admin_panel/cargo_admin.html
@@ -43,6 +43,7 @@
              </div>
              <div class="button">
                          <input type="submit" name="add_cargo" value="Add cargo">
+                         <a href="dashboard.html">go back</a>
              </div>
              </form>
          </div>
