--- a/admin_panel/crew_admin.html
+++ b/admin_panel/crew_admin.html
@@ -47,6 +47,7 @@
              </div>
              <div class="button">
                          <input type="submit" name="add_crew" value="Add member of crew">
+                         <a href="dashboard.html">go back</a>
              </div>
              </form>
          </div>
