--- a/admin_panel/ships_admin.html
+++ b/admin_panel/ships_admin.html
@@ -43,6 +43,7 @@
              </div>
              <div class="button">
                          <input type="submit" name="add_ship" value="Add ship">
+                         <a href="dashboard.html">go back</a>
              </div>
              </form>
          </div>
