--- a/admin_panel/users_admin.html
+++ b/admin_panel/users_admin.html
@@ -63,6 +63,7 @@
              </div>
              <div class="button">
                          <input type="submit" name="add_user" value="Add member of users">
+                         <a href="dashboard.html">go back</a>
              </div>
              </form>
          </div>
