--- a/registration/admin_page.html
+++ b/registration/admin_page.html
@@ -12,9 +12,9 @@
         <div class="container">
             <div class="content">
                     <h3>hi, <span>admin</span></h3>
-                    <h1>welcome <span> mohame </span></h1>
+                    <h1>welcome <span> manar </span></h1>
                     <p>this is an admin page</p>
-                    <a href="../dashboard.html" class="btn">dash board</a>
+                    <a href="../admin_panel/dashboard.html" class="btn">dash board</a>
                     <a href="login_form.html" class="btn">login</a>
                     <a href="register.html" class="btn">register</a>
                     <a href="logout_page.html" class="btn">logout</a>
