--- a/registration/user_page.html
+++ b/registration/user_page.html
@@ -12,9 +12,9 @@
         <div class="container">
             <div class="content">
                     <h3>hi, <span>user</span></h3>
-                    <h1>welcome <span></span></h1>
+                    <h1>welcome <span>manar</span></h1>
                     <p>this is an user page</p>
-                    <a href="../ship_port.html" class="btn">ship port</a>
+                    <a href="../port_website/ship_port.html" class="btn">ship port</a>
                     <a href="login_form.html" class="btn">login</a>
                     <a href="register.html" class="btn">register</a>
                     <a href="logout_page.html" class="btn">logout</a>
