--- a/admin_panel/dashboard.html
+++ b/admin_panel/dashboard.html
@@ -52,8 +52,21 @@
                        <p>users </p>
                     </a>
                 </li>
+                <li>
+                    <a href="trips_admin.html">
+                        <i class="fa-solid fa-ticket"></i>
+                        <p>book trips</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="contact_admin.html">
+                        <i class="fa-solid fa-message"></i>
+                         <p>contact</p>
+                    </a>
+                </li>
+
                 <li class="log-out">
-                    <a href="#">
+                    <a href="../registration/login_form.html">
                        <i class="fas fa-sign-out-alt"></i>
                        <p>Log out</p>
                     </a>
@@ -254,6 +267,58 @@
                       <td>1234</td>
                       <td>female</td>
                       <td>admin</td>
+                  </tr>
+          </table>
+         </div>
+         <h3 class="table-name">book trips table</h3>
+          <div class="crew-display">
+            <table class="crew-display-table">
+                <thead>
+                    <tr>
+                        <th>sender</th>
+                        <th>email</th>
+                        <th>phone number</th>
+                        <th>address</th>
+                        <th>destination port</th>
+                        <th>cargo description</th>
+                        <th>cargo weight</th>
+                        <th>cargo quantity</th>
+                        <th>payment method</th>
+                        <!-- <th>shipping date</th> -->
+
+
+                    </tr>
+                </thead>
+                   <tr>
+                      <td>TripQuest Solutions</td>
+                      <td>TripQuest Solutions@gmail.com</td>
+                      <td>01099210633</td>
+                      <td>turkey</td>                      
+                      <td>Zielhafen</td>
+                      <td>laptops</td>
+                      <td>1,000 kg</td>
+                      <td>100 unit</td>
+                      <td>paypal</td>
+                      <!-- <td>1/5/2024</td> -->
+                  </tr>
+          </table>
+         </div>            
+         <h3 class="table-name">contact table</h3>
+          <div class="crew-display">
+            <table class="crew-display-table">
+                <thead>
+                    <tr>
+                        <th>name</th>
+                        <th>email </th>
+                        <th>phone number </th>
+                        <th>message</th>
+                    </tr>
+                </thead>
+                   <tr>
+                      <td>manar</td>
+                      <td>manar@gmail.com</td>
+                      <td>01099210633</td>
+                      <td>hello ocean haven port</td>
                   </tr>
           </table>
          </div>      
