--- a/registration/register.html
+++ b/registration/register.html
@@ -33,6 +33,13 @@
                             <label for="cpassword" class="details">Confirm Password</label>
                             <input type="password" placeholder="Confirm your password" id="cpassword" name="cpassword" required>
                         </div>
+                        <div class="input-box">
+                            <label for="user_type" class="details">User Type</label>
+                            <select id="user_type" name="user_type">
+                               <option value="user">user</option>
+                               <option value="admin">admin</option>
+                            </select>
+                       </div>
                     </div>
                     <div class="gender-details">
                         <input type="radio" name="gender" id="dot-1" value="male">
@@ -54,10 +61,6 @@
                             </label>
                         </div>
                     </div>
-                    <select name="user_type">
-                        <option value="user">user</option>
-                        <option value="admin">admin</option>
-                    </select>
                     <div class="button">
                         <input type="submit" name="submit" value="Register">
                     </div>
