registration , ship port and dashboard front part

--- a/registration/user_page.html
+++ b/registration/user_page.html
@@ -17,7 +17,7 @@
                     <a href="../port_website/ship_port.html" class="btn">ship port</a>
                     <a href="login_form.html" class="btn">login</a>
                     <a href="register.html" class="btn">register</a>
-                    <a href="logout_page.html" class="btn">logout</a>
+                    <a href="login_form.html" class="btn">logout</a>
             </div>
         </div>
     </div>
