--- a/admin_panel/contact_admin.html
+++ b/admin_panel/contact_admin.html
@@ -14,11 +14,9 @@
      <div class="container">
         <div class="title" >
             Contact Messages
-        </div>
-                     
+        </div>         
              <div class="button">
-                         <a href="dashboard.html">go back</a>
-
+                         <a href="dashboard.php">go back</a>
              </div>
          </div>
               <div class="crew-display">
@@ -32,16 +30,8 @@
                              <th>action</th>
                          </tr>
                      </thead>
-                        <tr>
-                           <td>manar</td>
-                           <td>manar@gmail.com</td>
-                           <td>01099210633</td>
-                           <td>hello ocean haven port</td>
-                           
-                           <td>
-                                 <a href="contact_admin.html" class="btn"><i class="fas fa-trash"></i>delete</a>
-                           </td>
-                       </tr>
+                     <tbody id="contactTableBody">
+                     </tbody>
                </table>
               </div>
      </div>
