--- a/admin_panel/trips_admin.html
+++ b/admin_panel/trips_admin.html
@@ -13,60 +13,9 @@
  <div class="admin-crew">
      <div class="form-container">
      <div class="container">
-             <div class="title">Add trip </div>
-            <form action="" method="post" enctype="multipart/form-data">
-             <div class="user-details">
-                         <div class="input-box">
-                             <span class="details">sender Name</span>
-                             <input type="text" placeholder="Enter the name of a sender" id="sender" name="sender" required>
-                         </div>
-                         <div class="input-box">
-                             <span class="details">email</span>
-                             <input type="email" placeholder="Enter email" id="email" name="email" required>
-                         </div>
-                         <div class="input-box">
-                             <span class="details">phone number</span>
-                             <input type="number" placeholder="Enter phone number" id="number" name="number" required>
-                         </div>
-                         <div class="input-box">
-                             <span class="details">address</span>
-                             <input type="text" placeholder="Enter address" id="address" name="address" required>
-                         </div>
-                         <div class="input-box">
-                             <span class="details">destination port</span>
-                             <input type="text" placeholder="Enter destination port" id="destinationPort" name="destinationPort" required>
-                         </div>
-                         <div class="input-box">
-                            <span class="details">cargo description</span>
-                            <input type="text" placeholder="Enter cargo description" id="cargoDescription" name="cargoDescription" required>
-                        </div>
-                        <div class="input-box">
-                            <span class="details"> cargo weight</span>
-                            <input type="text" placeholder="Enter weight of cargo" id="weight" name="weight" required>
-                        </div>
-                        <div class="input-box">
-                            <span class="details"> cargo quantity</span>
-                            <input type="text" placeholder="Enter quantity of cargo" id="quantity" name="quantity" required>
-                        </div>
-                        <div class="input-box">
-                             <label for="payment_method" class="details">Payment Method</label>
-                            <select name="payment_method" id="payment_method">
-                                  <option value="paypal">PayPal</option>
-                                  <option value="visa">Visa</option>
-                                  <option value="mastercard">MasterCard</option>
-                                  <option value="american_express">American Express</option>
-                             </select>
-                        </div>
-
-                        <div class="input-box">
-                            <span class="details">shipping date</span>
-                            <input type="date" placeholder="Enter shipping date" id="shippingDate" name="shippingDate" required>
-                        </div>
-             </div>
+             <div class="title">booking trips </div>
              <div class="button">
-                         <input type="submit" name="add_trip" value="Add trip">
-                         <a href="dashboard.html">go back</a>
-
+                         <a href="dashboard.php">go back</a>
              </div>
              </form>
          </div>
@@ -84,25 +33,11 @@
                         <th>quantity of cargo</th>
                         <th>payment method</th>
                         <th>shipping date</th>
+                        <th>booking Date</th>
                         <th>action</th>
                      </thead>
-
-                        <tr>
-                            <td>TripQuest Solutions</td>
-                            <td>TripQuest Solutions@gmail.com</td>
-                            <td>01099210633</td>
-                            <td>turkey</td>                      
-                            <td>Zielhafen</td>
-                            <td>laptops</td>
-                            <td>1,000 kg</td>
-                            <td>100 unit</td>
-                            <td>paypal</td>
-                            <td>1/5/2024</td>
-                            <td>
-                               <a href="trips_update.html" class="btn"><i class="fas fa-edit"></i>edit</a>
-                               <a href="trips_admin.html" class="btn"><i class="fas fa-trash"></i>delete</a>
-                           </td>
-                       </tr>
+                     <tbody id="tripTableBody">
+                     </tbody>
                </table>
               </div>
      </div>   
