--- a/admin_panel/update_cargo.html
+++ b/admin_panel/update_cargo.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,33 +14,35 @@
 <body>
 <div class="admin-crew centered">
 <div class="container ">
+
             <div class="title">update cargo </div>
-            <form action="" method="post" enctype="multipart/form-data">
+            <form action="update_cargo.php" method="post" enctype="multipart/form-data">
+
             <div class="user-details">
                         <div class="input-box">
-                            <span class="details">cargo description</span>
-                            <input type="text" placeholder="Enter the cargo description" id="description" value="" name="description" required>
+                            <span class="details"> cargo description</span>
+                            <input type="text" placeholder="Enter the cargo description" id="description"  name="description" required>
                         </div>
                         <div class="input-box">
-                            <span class="details">cargo quantity</span>
-                            <input type="text" placeholder="Enter cargo quantity" id="quantity" value="" name="quantity" required>
+                            <span class="details"> cargo quantity</span>
+                            <input type="text" placeholder="Enter cargo quantity" id="quantity"  name="quantity" required>
                         </div>
                         <div class="input-box">
                             <span class="details">cargo weight</span>
-                            <input type="text" placeholder="Enter cargo weight" id="weight" value="" name="weight" required>
+                            <input type="text" placeholder="Enter cargo weight" id="weight" name="weight" required>
                         </div>
                         <div class="input-box">
-                            <span class="details">container type</span>
-                            <input type="text" placeholder="Enter container type " id="containerType" value="" name="containerType" required>
+                            <span class="details"> container type </span>
+                            <input type="text" placeholder="Enter container type " id="containerType"  name="containerType" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Ship ID</span>
-                            <input type="number" placeholder="Enter ship ID" id="shipID" value="" name="shipID" required>
+                            <input type="text" id="shipID"  name="shipID" required>
                         </div>
             </div>
             <div class="button">
                         <input type="submit" class="btn" name="update_cargo" value="update cargo">
-                        <a href="cargo_admin.html">go back</a>
+                        <a href="cargo_admin.php">go back</a>
             </div>
             </form>
 
