--- a/admin_panel/update_crew.html
+++ b/admin_panel/update_crew.html
@@ -12,32 +12,33 @@
 <body>
 <div class="admin-crew centered">
 <div class="container ">
+
             <div class="title">update Member Crew</div>
-            <form action="" method="post" enctype="multipart/form-data">
+            <form id="updateCrewForm" action="update_crew.php" method="post" enctype="multipart/form-data">
             <div class="user-details">
                         <div class="input-box">
                             <span class="details">Crew Name</span>
-                            <input type="text" placeholder="Enter the name of a crew member" id="crewName" value="" name="crewName" required>
+                            <input type="text" placeholder="Enter the name of a crew member" id="crewName" name="crewName" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Role</span>
-                            <input type="text" placeholder="Enter Role" id="role" value="" name="role" required>
+                            <input type="text" placeholder="Enter Role" id="role" name="role" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Nationality</span>
-                            <input type="text" placeholder="Enter nationality" id="nationality" value="" name="nationality" required>
+                            <input type="text" placeholder="Enter nationality" id="nationality" name="nationality" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Join Date</span>
-                            <input type="date" placeholder="Enter join date" id="joinDate" value="" name="joinDate" required>
+                            <input type="date" placeholder="Enter join date" id="joinDate" name="joinDate" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Email</span>
-                            <input type="email" placeholder="Enter email" id="contactInfo" value="" name="contactInfo" required>
+                            <input type="email" placeholder="Enter email" id="contactInfo" name="contactInfo" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Ship ID</span>
-                            <input type="number" placeholder="Enter ship ID" id="shipID" value="" name="shipID" required>
+                            <input type="number" placeholder="Enter ship ID" id="shipID" name="shipID" required>
                         </div>
                 
                         <div class="input-box">
@@ -52,6 +53,7 @@
             </form>
         </div>
 </div>
+<script src="crew.js"></script> 
 
 </body>
 </html>
