--- a/admin_panel/update_ship.html
+++ b/admin_panel/update_ship.html
@@ -12,28 +12,29 @@
 <body>
 <div class="admin-crew centered">
 <div class="container ">
+
             <div class="title">update ship</div>
-            <form action="" method="post" enctype="multipart/form-data">
+            <form action="update_ship.php" method="post" enctype="multipart/form-data">
             <div class="user-details">
                         <div class="input-box">
                             <span class="details">ship Name</span>
-                            <input type="text" placeholder="Enter the name of ship" id="shipName" value="" name="shipName" required>
+                            <input type="text" placeholder="Enter the name of ship" id="shipName" name="shipName" required>
                         </div>
                         <div class="input-box">
-                            <span class="details">ship type</span>
-                            <input type="text" placeholder="Enter ship type" id="shipType" value="" name="shipType" required>
+                            <span class="details">Role</span>
+                            <input type="text" placeholder="Enter ship type" id="shipType" name="shipType" required>
                         </div>
                         <div class="input-box">
-                            <span class="details">max capacity</span>
-                            <input type="number" placeholder="Enter max capacity" id="maxCapacity" value="" name="maxCapacity" required>
+                            <span class="details">Nationality</span>
+                            <input type="text" placeholder="Enter nationality" id="maxCapacity"  name="maxCapacity" required>
                         </div>
                         <div class="input-box">
                             <span class="details">registration Date</span>
-                            <input type="date" placeholder="Enter registration date" id="registrationDate" value="" name="registrationDate" required>
+                            <input type="text" placeholder="Enter registration date" id="registrationDate" name="registrationDate" required>
                         </div>
                         <div class="input-box">
                             <span class="details">owner info</span>
-                            <input type="email" placeholder="Enter owner info" id="ownerInfo" value="" name="ownerInfo" required>
+                            <input type="text" placeholder="Enter owner info" id="ownerInfo" name="ownerInfo" required>
                         </div>
                 
                         <div class="input-box">
@@ -46,7 +47,9 @@
                         <a href="ships_admin.html">go back</a>
             </div>
             </form>
+
         </div>
 </div>
+
 </body>
 </html>
